--- a/mixins/required-field.html
+++ b/mixins/required-field.html
@@ -23,6 +23,13 @@
         box-sizing: border-box;
       }
 
+      [part="label-container"] {
+        display: flex;
+        justify-content: space-between;
+        line-height: 1;
+        font-size: var(--lumo-font-size-s);
+      }
+
       :host([has-label])::before {
         margin-top: calc(var(--lumo-font-size-s) * 1.5);
       }
